[gd_scene load_steps=2 format=3 uid="uid://cgopslvmytbs2"]

[ext_resource type="Script" path="res://addons/datalogue/ui/forms/filter_form.gd" id="1_u1w78"]

[node name="FilterForm" type="Control"]
minimum_size = Vector2(350, 350)
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -674.0
offset_bottom = -250.0
script = ExtResource( "1_u1w78" )

[node name="MainLayout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ClassifTitleLayout" type="HBoxContainer" parent="MainLayout"]
offset_right = 350.0
offset_bottom = 26.0

[node name="ClassifTitle" type="Label" parent="MainLayout/ClassifTitleLayout"]
offset_right = 173.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
text = "Filter by classification"
vertical_alignment = 3

[node name="ClassifHint" type="Label" parent="MainLayout/ClassifTitleLayout"]
offset_left = 177.0
offset_right = 350.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "(Ctrl+click to multi-select)"
vertical_alignment = 1

[node name="ClassifLayout" type="HBoxContainer" parent="MainLayout"]
offset_top = 30.0
offset_right = 350.0
offset_bottom = 181.0
size_flags_vertical = 3

[node name="ClassifTree" type="Tree" parent="MainLayout/ClassifLayout"]
offset_right = 350.0
offset_bottom = 151.0
size_flags_horizontal = 3
select_mode = 2

[node name="ValueTitle" type="Label" parent="MainLayout"]
offset_top = 185.0
offset_right = 350.0
offset_bottom = 211.0
theme_override_font_sizes/font_size = 16
text = "Filter by value"

[node name="ValueLayout" type="HBoxContainer" parent="MainLayout"]
offset_top = 215.0
offset_right = 350.0
offset_bottom = 246.0

[node name="ValueId" type="OptionButton" parent="MainLayout/ValueLayout"]
offset_right = 114.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="ValueOp" type="OptionButton" parent="MainLayout/ValueLayout"]
offset_left = 118.0
offset_right = 232.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="ValueVal" type="SpinBox" parent="MainLayout/ValueLayout"]
offset_left = 236.0
offset_right = 350.0
offset_bottom = 31.0
size_flags_horizontal = 3
step = 0.0
allow_greater = true
allow_lesser = true
update_on_text_changed = true

[node name="TextTitle" type="Label" parent="MainLayout"]
offset_top = 250.0
offset_right = 350.0
offset_bottom = 276.0
text = "Filter by text"

[node name="TextLayout" type="HBoxContainer" parent="MainLayout"]
offset_top = 280.0
offset_right = 350.0
offset_bottom = 311.0

[node name="TextId" type="OptionButton" parent="MainLayout/TextLayout"]
offset_right = 173.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="TextValue" type="LineEdit" parent="MainLayout/TextLayout"]
offset_left = 177.0
offset_right = 350.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="MainLayout"]
offset_top = 315.0
offset_right = 350.0
offset_bottom = 315.0

[node name="ButtonLayout" type="HBoxContainer" parent="MainLayout"]
offset_top = 319.0
offset_right = 350.0
offset_bottom = 350.0

[node name="CancelBtn" type="Button" parent="MainLayout/ButtonLayout"]
offset_right = 114.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Cancel"

[node name="ClearBtn" type="Button" parent="MainLayout/ButtonLayout"]
offset_left = 118.0
offset_right = 232.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Clear"

[node name="ApplyBtn" type="Button" parent="MainLayout/ButtonLayout"]
offset_left = 236.0
offset_right = 350.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Apply"

[connection signal="pressed" from="MainLayout/ButtonLayout/CancelBtn" to="." method="_on_CancelBtn_pressed"]
[connection signal="pressed" from="MainLayout/ButtonLayout/ClearBtn" to="." method="_on_ClearBtn_pressed"]
[connection signal="pressed" from="MainLayout/ButtonLayout/ApplyBtn" to="." method="_on_ApplyBtn_pressed"]
